# gdb-mcp

./: CONTEXT.md  README.md  gdb.py  install-gemini.sh  pyproject.toml  server.py
