[project]
name = "gdb-mcp"
version = "0.1.0"
description = "MCP server for controlling GDB debugging sessions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0",
]

[project.scripts]
gdb-mcp = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
